@@ -39,6 +39,7 @@ deps =
     stravalib <= 1.1.0
     iwlib
     psutil
+    pulsectl-asyncio
 # pywayland has to be installed before pywlroots
 commands =
     pip install --force-reinstall --no-binary :all: cffi
