@@ -1,3 +1,4 @@
+2023-09-16: [FEATURE] Add `PulseVolumeExtra` widget
 2023-09-01: [BUGFIX] Fix two `RectDecoration` rendering bugs (issues #266 and #267)
 2023-08-13: [BUGFIX] Fix `PowerLineDecoration` for Wayland (and make it generally better)
 2023-08-10: [BUGFIX] X11 - fix issue with translucent decorations resulting in artefacts (needs latest qtile).
